--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -10,7 +10,7 @@ jp.js @mty22 @Hiro527 @KnockerOut
 kr.js @dojinshi @YuniQ152 @apinklover
 
 # Spanish
-es.js @xlNightmare
+es.js @xlNightmare @itzTmBb
 
 # Finnish
 fi.js @DefinitelyJypa
